[wcag] Fix contrast on dataset page when facet has no values

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -2311,6 +2311,9 @@ select, .select2-choice {
   }
 }
 
+.empty {
+  color: @grey4;
+}
 
 // RESOURCE LIST -----------------------------------------------------------------------------------
 
